--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,217 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Activity Monitoring"
+output:
+  md_document:
+    variant: markdown_github
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
-## Loading and preprocessing the data
+Aaditya Aanand  
+13 May 2017
+
+### Loading and Exploring Our Dataset
+
+```{r}
+library(anytime)
+library(dplyr)
+library(ggplot2)
+act <- read.csv("activity.csv")
+```
+
+Let's explore our data first.
+
+```{r}
+dim(act)
+names(act)
+str(act)
+summary(act)
+head(act)
+```
+
+Let us change the type of _date_ column from **factor** to **Date** and add a new column for determining whether the given date is a weekend or not.
+
+```{r}
+act <- mutate(act, date = anytime(date))
+str(act)
+
+## Now, we are sure about the class of "date" variable
+temp <- sapply(1:17568, function(x) as.POSIXlt(act$date[x])$wday %in% c(0,6))
+act <- mutate(act, weekend = as.numeric(temp))
+
+## Let's look at our data now and its structure
+head(act)
+str(act)
+
+## Everything seems fine now
+```
+
+### Mean total number of steps taken per day
+
+```{r}
+temp <- group_by(act, date)
+ss <- as.data.frame(summarise(temp, sum(steps, na.rm = TRUE)))
+names(ss) <- c("date", "steps")
+head(ss)
+```
+
+```{r}
+## Let's calculate the mean and median of the number of steps taken each day
+
+mean(ss$steps)
+median(ss$steps)
+
+g <- ggplot(data = ss, aes(steps))
+g <- g + geom_histogram(color = "red", fill = "light blue")
+g <- g + theme_gray(base_family = "Times")
+g <- g + labs(title = "Histogram of number of steps taken each day")
+g <- g + labs(x = "steps", y = "Number of Days")
+g <- g + geom_vline(xintercept = mean(ss$steps), color = "green")
+g <- g + geom_vline(xintercept = median(ss$steps), color = "blue")
+g
+```
+
+The green line corresponds to the mean value of 9354.23 and the blue line corresponds to the median value of 10395 steps per day.
+
+### Average daily activity pattern
+
+```{r}
+temp <- group_by(act, interval)
+ss <- as.data.frame(summarise(temp, mean(steps, na.rm = TRUE)))
+names(ss) <- c("interval", "steps")
+head(ss)
+```
+
+```{r}
+## Finding the interval having maximum number of steps 
+x <- which.max(ss$steps)
+max_steps <- ss[x, 2]
+corr_interval <- ss[x, 1]
+
+max_steps
+corr_interval
+
+##Now, let's plot
+g <- ggplot(data = ss, aes(interval, steps))
+g <- g + geom_line(color = "salmon")
+g <- g + theme_gray(base_family = "Times")
+g <- g + labs(title = "Mean of number of steps taken in each 5 minute interval")
+g <- g + labs(x = "Time Interval", y = "Number of Steps")
+g <- g + geom_vline(xintercept = corr_interval, color = "green", size = 0.1)
+g
+```
+
+Thin green line corresponds for the maximum value of mean number of steps, 206.1698 at the respective time interval of 835.
+
+### Imputing missing values
+
+```{r}
+sapply(1:4, function(x) sum(is.na(act[x])))
+```
+
+We see that, there are 2304 missing values present in _**steps**_ column and in other columns there are no missing values. Hence there are a total of 2304 rows with missing values.
+
+**Missing Values:** Let's fill the NAs corresponding to each interval by the mean of the number of steps taken on that particular interval in the past two months, rounded off to the nearest integer.
+
+```{r}
+old.act <- act
+
+## creating new dataset 
+for(i in 1:17568) {
+        if(is.na(act[i, 1]) == TRUE) {
+                interval.x <- act[i, 3]
+                row.x <- which(ss$interval == interval.x)
+                act[i, 1] = round(ss[row.x, 2])
+        }
+}
+
+## Now, let us look at the head of our old and new datasets
+head(old.act)
+head(act)
+```
+
+Everything looks fine now. 
+
+```{r}
+temp <- group_by(act, date)
+ss <- as.data.frame(summarise(temp, sum(steps, na.rm = TRUE)))
+names(ss) <- c("date", "steps")
+head(ss)
+```
+
+```{r}
+## Let's calculate the mean and median of the number of steps taken each day
+
+mean(ss$steps)
+median(ss$steps)
+
+g <- ggplot(data = ss, aes(steps))
+g <- g + geom_histogram(color = "red", fill = "light blue")
+g <- g + theme_gray(base_family = "Times")
+g <- g + labs(title = "Histogram of number of steps taken each day")
+g <- g + labs(x = "steps", y = "Number of Days")
+g <- g + geom_vline(xintercept = mean(ss$steps), color = "green", size = 0.1)
+g <- g + geom_vline(xintercept = median(ss$steps), color = "blue", size = 0.1)
+g
+```
+
+The green line corresponds to the mean value of 10765.64 and the blue line corresponds to the median value of 10762 steps per day. We may not see both the line as mean and median values are very close. We see that after imputing the missing values, there is a surge in both mean and median of the parameter of interest.
+
+```{r}
+temp <- group_by(old.act, interval)
+old.ss <- as.data.frame(summarise(temp, sum(steps, na.rm = TRUE)/61))
+names(old.ss) <- c("interval", "steps")
+
+temp <- group_by(act, interval)
+ss <- as.data.frame(summarise(temp, mean(steps)))
+names(ss) <- c("interval", "steps")
+
+## Plotting the mean steps taken per 5 minute interval before and after imputing the data
+
+g <- ggplot(data = old.ss, aes(interval, steps)) + geom_line(aes(color = "Before Imputation")) + geom_line(data = ss, aes(color = "After Imputation")) + labs(color="Legend text")
+g <- g + theme_gray(base_family = "Times")
+g <- g + labs(title = "Mean of number of steps taken in each 5 minute interval before and after imputation")
+g <- g + labs(x = "Time Interval", y = "Number of Steps")
+g
+```
+
+### Activity pattern at weekdays and weekends
+
+```{r}
+## Let's create our required dataset
+
+tempo <- group_by(act, weekend, interval)
+req_data <- as.data.frame(summarise(tempo, mean(steps)))
+names(req_data) <- c("weekend", "interval", "average.steps")
+head(req_data)
+
+weekdays <- req_data[1:288, 2:3]
+weekends <- req_data[289:576, 2:3]
+
+head(weekdays)
+head(weekends)
+
+## Everything looks fine now. Let us create the plot.
+```
+
+```{r}
+g <- ggplot(data = weekdays, aes(interval, average.steps))
+g <- g + geom_line(aes(color = "Weekdays"))
+g <- g + geom_line(data = weekends, aes(color = "Weekends"))
+g <- g + labs(color = "Legend text")
+g <- g + theme_gray(base_family = "Times")
+g <- g + labs(title = "Mean of number of steps taken in each 5 minute interval during weekdays and weekends")
+g <- g + labs(x = "Time Interval", y = "Number of Steps")
+g
+```
+
+We see that on an average, the subject walked more number of steps during weekends than in weekdays may be because on weekdays he'll be in office and unable to walk a lot!
 
 
 
-## What is mean total number of steps taken per day?
 
 
 
-## What is the average daily activity pattern?
 
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
